--- a/docs/sources/configuration/examples/complete-local-config.yaml
+++ b/docs/sources/configuration/examples/complete-local-config.yaml
@@ -12,7 +12,7 @@ ingester:
       replication_factor: 1
     final_sleep: 0s
   chunk_idle_period: 5m
-  chunk_retrain_period: 30s
+  chunk_retain_period: 30s
 
 schema_config:
   configs:
