--- a/docs/sources/configuration/examples/google-cloud-storage-config.yaml
+++ b/docs/sources/configuration/examples/google-cloud-storage-config.yaml
@@ -1,3 +1,5 @@
+# This is a partial config that uses GCS for chunk storage and BigTable for index storage
+
 schema_config:
   configs:
   - from: 2020-05-15
