CI: Fixing linter deprecations (#4353)
* Fixing CI deprecations

Replacing deprecated golint with revive (https://github.com/golangci/golangci-lint/pull/1965)

Removing interfacer (https://github.com/golangci/golangci-lint/pull/1755)

Signed-off-by: Danny Kopping <danny.kopping@grafana.com>

* Further suggestions from Marco in https://github.com/grafana/loki/issues/1002

Signed-off-by: Danny Kopping <danny.kopping@grafana.com>

* Clarify instruction

Signed-off-by: Danny Kopping <danny.kopping@grafana.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -55,18 +55,17 @@ linters:
     - goconst
     - gofmt
     - goimports
-    - golint
+    - revive
     - gosimple
     - ineffassign
-    - megacheck
+    - staticcheck
     - misspell
     - structcheck
     - unconvert
     - unparam
     - varcheck
     - govet
-    - unused # new from here.
-    - interfacer
+    - unused
     - typecheck
 
 issues:
