don't show password in template parameters + include examples of deploy commands in readme
Signed-off-by: Callum Styan <callumstyan@gmail.com>

--- a/tools/lambda-promtail/template.yaml
+++ b/tools/lambda-promtail/template.yaml
@@ -21,6 +21,7 @@ Parameters:
     Description: The basic auth password, necessarry if writing directly to Grafana Cloud Loki.
     Type: String
     Default: ""
+    NoEcho: true
   LambdaPromtailImage:
     Description: The ECR image URI to pull and use for lambda-promtail.
     Type: String
