Add a correction to PR 4358

--- a/docs/sources/configuration/examples/almost-zero-dependency.yaml
+++ b/docs/sources/configuration/examples/almost-zero-dependency.yaml
@@ -1,5 +1,5 @@
 # This is a configuration to deploy Loki depending only on a storage solution 
-# e.g. an S3-compatible API like minio. 
+# e.g. an S3-compatible API like MinIO. 
 # The ring configuration is based on the gossip memberlist and the index is shipped to storage 
 # via Single Store (boltdb-shipper)
 
