--- a/docs/sources/configuration/examples/s3-compatible-apis.yaml
+++ b/docs/sources/configuration/examples/s3-compatible-apis.yaml
@@ -1,5 +1,5 @@
-# S3-compatible APIs (e.g. Ceph Object Storage with an S3-compatible API) can be used.
-# If the API supports path-style URL rather than virtual hosted bucket addressing,
+# S3-compatible APIs such as Ceph Object Storage with an S3-compatible API, can be used.
+# If the API supports path-style URLs rather than virtual hosted bucket addressing,
 # configure the URL in `storage_config` with the custom endpoint
 
 schema_config:
@@ -15,3 +15,4 @@ storage_config:
     s3: s3://access_key:secret_access_key@region/bucket_name
     dynamodb:
       dynamodb_url: dynamodb://access_key:secret_access_key@region
+      
