--- a/docs/sources/configuration/examples/s3-expanded-config.yaml
+++ b/docs/sources/configuration/examples/s3-expanded-config.yaml
@@ -1,5 +1,5 @@
-# S3 config now supports expanded config. 
-# Either `s3` endpoint URL can be used or expanded config can be used
+# S3 configuration supports an expanded configuration. 
+# Either an `s3` endpoint URL can be used, or an expanded configuration can be used.
 
 schema_config:
   configs:
@@ -23,3 +23,4 @@ storage_config:
       response_header_timeout: 0s
       insecure_skip_verify: false
     s3forcepathstyle: true
+    
