update build image go versions plus fix install of drone-cli
Signed-off-by: Callum Styan <callumstyan@gmail.com>

--- a/loki-build-image/Dockerfile
+++ b/loki-build-image/Dockerfile
@@ -26,23 +26,24 @@ RUN apk add --no-cache docker-cli
 # TODO this should be fixed to download and extract the specific release binary from github as we do for golangci and helm above
 # however we need a commit which hasn't been released yet: https://github.com/drone/drone-cli/commit/1fad337d74ca0ecf420993d9d2d7229a1c99f054
 # Read the comment below regarding GO111MODULE=on and why it is necessary
-FROM golang:1.16.6 as drone
-RUN GO111MODULE=on go get github.com/drone/drone-cli/drone@v1.4.0
+FROM golang:1.17.2 as drone
+RUN curl -L https://github.com/drone/drone-cli/releases/download/v1.4.0/drone_linux_amd64.tar.gz | tar zx && \
+    install -t /usr/local/bin drone
 
 # Install faillint used to lint go imports in CI.
 # This collisions with the version of go tools used in the base image, thus we install it in its own image and copy it over.
 # Error:
 #	github.com/fatih/faillint@v1.5.0 requires golang.org/x/tools@v0.0.0-20200207224406-61798d64f025
 #   (not golang.org/x/tools@v0.0.0-20190918214920-58d531046acd from golang.org/x/tools/cmd/goyacc@58d531046acdc757f177387bc1725bfa79895d69)
-FROM golang:1.16.6 as faillint
+FROM golang:1.17.2 as faillint
 RUN GO111MODULE=on go get github.com/fatih/faillint@v1.5.0
 
 # Install ghr used to push binaries and template the release
 # This collides with the version of go tools used in the base image, thus we install it in its own image and copy it over.
-FROM golang:1.16.6 as ghr
+FROM golang:1.17.2 as ghr
 RUN GO111MODULE=on go get github.com/tcnksm/ghr
 
-FROM golang:1.16.6-buster
+FROM golang:1.17.2-buster
 RUN apt-get update && \
     apt-get install -qy \
     musl gnupg ragel \
@@ -55,7 +56,7 @@ COPY --from=docker /usr/bin/docker /usr/bin/docker
 COPY --from=helm /usr/bin/helm /usr/bin/helm
 COPY --from=lychee /usr/bin/lychee /usr/bin/lychee
 COPY --from=golangci /bin/golangci-lint /usr/local/bin
-COPY --from=drone /go/bin/drone /usr/bin/drone
+COPY --from=drone /usr/local/bin/drone /usr/bin/drone
 COPY --from=faillint /go/bin/faillint /usr/bin/faillint
 COPY --from=ghr /go/bin/ghr /usr/bin/ghr
 
